--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fnss",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Extensible functional stylesheets for React and React-Native",
   "main": "index.js",
   "author": "Chris Baker <mail.chris.baker@gmail.com>",
@@ -22,6 +22,7 @@
     "url": "https://github.com/bakerface/fnss/issues"
   },
   "scripts": {
+    "storybook": "start-storybook -p 9001 -c .storybook",
     "build": "cross-env NODE_ENV=production rollup -c",
     "test": "xo"
   },
@@ -63,6 +64,7 @@
     "prop-types": "^15.5.10"
   },
   "devDependencies": {
+    "@storybook/react": "^3.1.3",
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
@@ -71,6 +73,8 @@
     "eslint-config-xo-react": "^0.12.0",
     "eslint-plugin-react": "^7.1.0",
     "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-native-web": "0.0.109",
     "rollup": "^0.43.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
